video homepage working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,10 @@
+<video id="bgvid" loop muted autoplay poster="./css/images/backgroundshot.png" class="fullscreen-bg__video">
+    <source src="" type="video/webm">
+    <source src="/images/videos/tape.mp4" type="video/mp4">
+</video>
 
-  <h1>Home</h1>
+<div id="logo">
+  <img src="/images/hrLogo1.png" alt="logo">
+</div>
 
 
