--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,9 @@
 <div id="logo">
   <img src="/images/hrLogo1.png" alt="logo">
 </div>
-
-
+<div>
+  <img id="pitch" src="/images/pitch.png">
+</div>
+<div class="groupbtns">
+  <a href="/signup"><img class="indexbtns" src="/images/signupbtn.png"></a><a href="/login"><img class="indexbtns" src="/images/loginbtn.png"></a>
+</div>
