--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,1 +1,12 @@
+<style type="text/css">
+  body {
+    background: 
+      url("/images/loosetape.png"); 
+      background-size: contain;
+      background-attachment: fixed;
+      background-repeat: none;
+  }
+
+</style>
+
 <h1>Search</h1>
