--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <link href='https://fonts.googleapis.com/css?family=Kalam|Slabo+27px' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/css/main.css"> 
   
   <title>Hash Rocket</title>
@@ -24,20 +24,28 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <img id="navlogo" src="./images/hrlogo.png">
+        <a href="/"><img id="navlogo" src="./images/hrlogo.png"></a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Home</a></li>
           <li><a href="/profile">Profile</a></li>
+          <li><a href="/search">Search</a></li>
+          <li><a href="/login">Login</a></li>
           <li><a href="/logout">Log Out</a></li>
+          <li><a href="/signup">Sign Up</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
   </nav>
-
+    <% if (typeof alerts !== 'undefined') { %>
+      <% for (key in alerts) { %>
+        <% alerts[key].forEach(function(thisMsg) { %>
+          <div class="alert alert-<%= key %>"><%= thisMsg %></div>
+        <% }); %>
+      <% } %>
+    <% } %>
   <%- body %>
 </body>
 </html>
