--- a/views/details.ejs
+++ b/views/details.ejs
@@ -14,4 +14,11 @@
 
 </style>
 
-<h1>Band Details</h1>
+<div class="container" id='contdetailswell'>
+<div class="well" id="detailswell">
+  <img id="detailslogo" src="/images/banddetailslogo.png">
+  <img src="<%= artist.images[1].url%>">
+  <%= artist.name %>
+
+</div>
+</div>
