--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
-<video id="bgvid" loop muted autoplay poster="./css/images/backgroundshot.png" class="fullscreen-bg__video">
+
+<video id="bgvid" loop muted autoplay poster="/images/backgroundshot.png" class="fullscreen-bg__video">
     <source src="" type="video/webm">
     <source src="/images/videos/tape.mp4" type="video/mp4">
 </video>
