--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,7 @@
 
 #nav {
   margin-top: 6px;
+  background-color: #948E67;
 }
 
 #navlogo {
@@ -28,16 +29,18 @@
   font-size: 14px !important;
 
 }*/
-
 </style>
+<div class="opcbg">
+<div class="container">
 <form method="POST">
   <div class="well" id="loginwell">
-    <img id="loginimg"src="/images/starlogo.png">
-    <h1 id="logintitle">Login</h1>
+    <img id="loginimg"src="/images/loginlogo.png"><br>
     <label for="">Email:</label>
-    <input type="text" class="form-control" name="email">
+    <input type="text" class="form-control" name="email"><br>
     <label for="">Password:</label>
     <input type="password" class="form-control" name="password">
-    <button type="submit">Log In</button>
+    <button type="submit" class="allbuttons">Log In</button>
   </div>
 </form>
+</div>
+</div>
