--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,6 @@
 <style type="text/css">
   body {
     background-image: url("/images/coloredcassettebg.jpg"); 
-    /*height: 100%;
-    width: 100%;*/
     background-position: center;
     background-attachment: fixed;
   }
@@ -19,10 +17,19 @@
 }
 
 </style>
-
+  <!-- <div class="container text-center"> If i wanted to center within container and height and width percentile would FILL container. -->
+  <div class="opcbg">
+    <div class="container">
+    <div class="well" id="profilewell">
+      <img id="profilelogo" src="/images/profilelogo.png">
+    </div>
   
-  <div class="title">
-    <h1>Profile</h1>
+    <div class="well" id="favoriteswell">
+      <img id="favoriteslogo"src="/images/favoriteslogo.png">
+    </div>
+    </div>
   </div>
+<!-- </div> -->
+
 
 
