--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,14 +10,14 @@
 
 <form method="POST">
   <div class="well" id="signupwell">
-  <h1>Sign Up</h1>
-      <label>Name</label>
+  <img id="signuplogo"src="/images/signuplogo.png"><br>
+      <label>Name:</label>
       <input type="text" class="form-control" name="name"><br>
-      <label>Email</label>
+      <label>Email:</label>
       <input type="text" class="form-control" name="email"><br>
-      <label>Password</label>
+      <label>Create Password:</label>
       <input type="password" class="form-control" placeholder="Password" name="password1"> <br>
       <input type="password" class="form-control" placeholder="Retype Password" name="password2">
-      <button type="submit" class="allButton">Create Profile</button>
+      <button type="submit" class="allbuttons">Create Profile</button>
   </div>
 </form>
