--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,12 +26,18 @@
         </button>
         <a href="/"><img id="navlogo" src="./images/hrlogo.png"></a>
       </div>
-  
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">  
+          <li>
+            <form action="/search" class="navbar-form" role="search">
+              <div class="form-group">
+              <input name="artist" type="text" class="form-control" placeholder="Search Bands" id="inputform">
+              </div>
+              <button type="submit" class="btn btn-default" id="searchbtn">Submit</button>
+            </form>
+          </li>
           <li><a href="/profile">Profile</a></li>
-          <li><a href="/search">Search</a></li>
           <li><a href="/login">Login</a></li>
           <li><a href="/logout">Log Out</a></li>
           <li><a href="/signup">Sign Up</a></li>
