--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,19 +5,26 @@
       background-size: cover;
       background-attachment: fixed;
   }
+  #nav {
+    background-color: #417E99;
+    border: none;
+}
 
 </style>
-
-<form method="POST">
-  <div class="well" id="signupwell">
-  <img id="signuplogo"src="/images/signuplogo.png"><br>
-      <label>Name:</label>
-      <input type="text" class="form-control" name="name"><br>
-      <label>Email:</label>
-      <input type="text" class="form-control" name="email"><br>
-      <label>Create Password:</label>
-      <input type="password" class="form-control" placeholder="Password" name="password1"> <br>
-      <input type="password" class="form-control" placeholder="Retype Password" name="password2">
-      <button type="submit" class="allbuttons">Create Profile</button>
+<div class="opcbgsingup">
+<div class="container">
+  <form method="POST">
+    <div class="well" id="signupwell">
+    <img id="signuplogo"src="/images/signuplogo.png"><br>
+        <label>Name:</label>
+        <input type="text" class="form-control" name="name"><br>
+        <label>Email:</label>
+        <input type="text" class="form-control" name="email"><br>
+        <label>Create Password:</label>
+        <input type="password" class="form-control" placeholder="Password" name="password1"> <br>
+        <input type="password" class="form-control" placeholder="Retype Password" name="password2">
+        <button type="submit" class="allbuttons">Create Profile</button>
+    </div>
+  </form>
   </div>
-</form>
+</div>
