--- a/views/details.ejs
+++ b/views/details.ejs
@@ -13,12 +13,28 @@
 }
 
 </style>
-
+<!-- current artist -->
 <div class="container" id='contdetailswell'>
 <div class="well" id="detailswell">
   <img id="detailslogo" src="/images/banddetailslogo.png">
-  <img src="<%= artist.images[1].url%>">
+  <img src="<%= artist.images[0].url%>">
   <%= artist.name %>
-
 </div>
+
+<!-- related artist -->
+<% related.artists.forEach(function(artist) { %>
+<div class="well">
+<% if (artist.images&& artist.images[0]) {%>
+<img src="<%= artist.images[0].url%>">
+<%}else {%>
+  No image available
+<% } %>
+<%= artist.name %>
+<%= JSON.stringify(artist)%>
+<a href="/details/<%= artist.id %>">
+<button type="submit" class="allbuttons">More Info!</button></a>
+</div>
+<% }); %>
+
+
 </div>
