--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/"><img id="navlogo" src="./images/hrlogo.png"></a>
+        <a href="/"><img id="navlogo" src="/images/hrlogo.png"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
