--- a/views/results.ejs
+++ b/views/results.ejs
@@ -14,7 +14,11 @@
 <h1>Results</h1>
 <% artists.items.forEach(function(artist) { %>
 <div class="well">
+<% if (artist.images&& artist.images[0]) {%>
 <img src="<%= artist.images[0].url%>">
+<%}else {%>
+  No image available
+<% } %>
 <%= artist.name %>
 <a href="/details/<%= artist.id %>">
 <button type="submit" class="allbuttons">More Info!</button></a>
