--- a/views/details.ejs
+++ b/views/details.ejs
@@ -11,30 +11,41 @@
     font-size: 17px;
     text-shadow: 0 1px 1px rgba(0,0,0,.7)
 }
-
+img {
+  height: 200px;
+  width: 200px;
+}
 </style>
+
 <!-- current artist -->
-<div class="container" id='contdetailswell'>
-<div class="well" id="detailswell">
-  <img id="detailslogo" src="/images/banddetailslogo.png">
-  <img src="<%= artist.images[0].url%>">
-  <%= artist.name %>
+<div class="container">
+  <div class="well" id="detailswell">
+    <img id="detailslogo" src="/images/banddetailslogo.png">
+    <img src="<%= artist.images[0].url%>">
+    <%= artist.name %>
+  </div>
+  <!-- related artist -->
+  <div class="well" id="relatedwell">
+    <% related.artists.forEach(function(artist) { %>
+      <div class="well">
+        <% if (artist.images&& artist.images[0]) {%>
+          <img src="<%= artist.images[0].url%>">
+        <%}else {%>
+          No image available
+        <% } %>
+        <%= artist.name %>
+        <!--<%= JSON.stringify(artist)%> to see what is returned from API-->
+        <a href="/details/<%= artist.id %>">
+          <button type="submit" class="allbuttons">More Info!</button>
+        </a>
+        <form method="POST" action="/addtofavs">
+          <input type="hidden" name="id" value="<%= artist.id %>">
+          <input type="hidden" name="name" value="<%= artist.name %>">
+          <button type="submit" class="allbuttons">Add to favs</button>
+        </form>
+      </div>
+    <% }); %>
+  </div>
 </div>
 
-<!-- related artist -->
-<% related.artists.forEach(function(artist) { %>
-<div class="well">
-<% if (artist.images&& artist.images[0]) {%>
-<img src="<%= artist.images[0].url%>">
-<%}else {%>
-  No image available
-<% } %>
-<%= artist.name %>
-<%= JSON.stringify(artist)%>
-<a href="/details/<%= artist.id %>">
-<button type="submit" class="allbuttons">More Info!</button></a>
-</div>
-<% }); %>
 
-
-</div>
