--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -37,10 +37,14 @@
               <button type="submit" class="btn btn-default" id="searchbtn">Submit</button>
             </form>
           </li>
-          <li><a href="/profile">Profile</a></li>
+          <% if (session.user && session.user.name) { %>
+            <li><a><%= session.user.name %></a></li>
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          <%} else { %>
           <li><a href="/login">Login</a></li>
-          <li><a href="/logout">Log Out</a></li>
           <li><a href="/signup">Sign Up</a></li>
+          <%}%>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
