--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,14 +22,21 @@
     <div class="container">
     <div class="well" id="profilewell">
       <img id="profilelogo" src="/images/profilelogo.png">
+      <%= user.name %>
     </div>
   
     <div class="well" id="favoriteswell">
       <img id="favoriteslogo"src="/images/favoriteslogo.png">
+      <% user.favs.forEach(function(fav) { %>
+      <div>
+        <%= fav.name %>
+        <a href="/details/<%= fav.id %>">
+          <button type="submit" class="allbuttons">More Info!</button>
+        </a>
+       </div> 
+      <% });%>
     </div>
     </div>
   </div>
 <!-- </div> -->
-
-
 
