--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,7 +24,7 @@
       <img id="profilelogo" src="/images/profilelogo.png">
       <%= user.name %>
     </div>
-  
+  <!-- favorites well  -->
     <div class="well" id="favoriteswell">
       <img id="favoriteslogo"src="/images/favoriteslogo.png">
       <% user.favs.forEach(function(fav) { %>
