--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
 <div class="container text-center" id="pitchdiv">
   <img id="pitch" src="/images/pitch.png">
 </div>
-<div class="groupbtns">
-  <a href="/signup"><img class="indexbtns" src="/images/signupbtn.png"></a><a href="/login"><img class="indexbtns" src="/images/loginbtn.png"></a>
-</div>
+<% if ( !session.user || !session.user.name) { %>
+  <div class="groupbtns">
+    <a href="/signup"><img class="indexbtns" src="/images/signupbtn.png"></a><a href="/login"><img class="indexbtns" src="/images/loginbtn.png"></a>
+  </div>
+<%}%>
 </div>
