--- a/views/details.ejs
+++ b/views/details.ejs
@@ -18,6 +18,10 @@ img {
 h1 {
   text-align: center;
 }
+#relatedartistlogo {
+      height: 170px;
+    width: 415px;
+}
 </style>
 
 <!-- current artist -->
