--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,19 +8,49 @@
     background-color:;
     margin-top: 5%;
   }
+  img {
+    height: 200px;
+    width: 200px;
+  }
+
+  #resultswell {
+    background-color: #D8D8D8;
+    border: 0;
+    width: 500px;
+    /*min-height: 200px;*/
+    height: 50%;
+    color: #B93717;
+    text-align: center;
+    /*font-size: 22px;*/
+    /*position: relative;*/
+    top: 30px;
+    margin: 2% auto !important;
+  }
+
+  #resultslogo {
+    height: 165px;
+    width: 445px;
+    margin-top: -15px;
+  }
+
+  .container{
+    width: 100% !important;
+  }
+
 
 </style>
-
-<h1>Results</h1>
+<img id="resultslogo" src="/images/resultslogo.png">
 <% artists.items.forEach(function(artist) { %>
-<div class="well">
+<div class="container">
+<div class="well" id="resultswell">
 <% if (artist.images&& artist.images[0]) {%>
 <img src="<%= artist.images[0].url%>">
 <%}else {%>
   No image available
 <% } %>
-<%= artist.name %>
+<h2><%= artist.name %></h2>
 <a href="/details/<%= artist.id %>">
 <button type="submit" class="allbuttons">More Info!</button></a>
 </div>
 <% }); %>
+</div>
