--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,56 +1,50 @@
 <style type="text/css">
-  body {
-    background: 
-      url("/images/loosetape.png"); 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-color:;
-    margin-top: 5%;
-  }
-  img {
-    height: 200px;
-    width: 200px;
-  }
-
-  #resultswell {
-    background-color: #D8D8D8;
-    border: 0;
-    width: 500px;
-    /*min-height: 200px;*/
-    height: 50%;
-    color: #B93717;
-    text-align: center;
-    /*font-size: 22px;*/
-    /*position: relative;*/
-    top: 30px;
-    margin: 2% auto !important;
-  }
-
-  #resultslogo {
-    height: 165px;
-    width: 445px;
-    margin-top: -15px;
-  }
-
-  .container{
-    width: 100% !important;
-  }
-
-
+body {
+  background: 
+  url("/images/loosetape.png"); 
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-color:;
+  margin-top: 5%;
+}
+img {
+  height: 200px;
+  width: 200px;
+}
+#resultswell {
+  background-color: #D8D8D8;
+  border: 0;
+  width: 500px;
+  height: 50%;
+  color: #B93717;
+  text-align: center;
+  top: 30px;
+  margin: 2% auto !important;
+}
+#resultslogo {
+  height: 165px;
+  width: 445px;
+  margin-top: -15px;
+}
+.container{
+  width: 100% !important;
+}
 </style>
+
 <img id="resultslogo" src="/images/resultslogo.png">
 <% artists.items.forEach(function(artist) { %>
 <div class="container">
-<div class="well" id="resultswell">
-<% if (artist.images&& artist.images[0]) {%>
-<img src="<%= artist.images[0].url%>">
-<%}else {%>
-  No image available
-<% } %>
-<h2><%= artist.name %></h2>
-<a href="/details/<%= artist.id %>">
-<button type="submit" class="allbuttons">More Info!</button></a>
-</div>
-<% }); %>
+  <div class="well" id="resultswell">
+    <% if (artist.images&& artist.images[0]) {%>
+      <img src="<%= artist.images[0].url%>">
+    <%}else {%>
+      No image available
+    <% } %>
+    <h2><%= artist.name %></h2>
+    <a href="/details/<%= artist.id %>">
+      <button type="submit" class="allbuttons">More Info!</button>
+    </a>
+  </div>
+  <% }); %>
 </div>
